# pypptx-engine

./: .gitignore  ENHANCEMENTS.md  FLOWCHART_README.md  README.md  pyproject.toml
.context/: architecture.md  feature.md  overview.md
docs/: FLEXIBLE_ANIMATIONS.md  TEMPLATES_AND_ANIMATIONS.md
src/ai/: .env.example  .gitignore  README.md  __init__.py  ai_foundry.py  cli.py  cli_enhanced.py  content_extractor.py  content_plan.md  enhanced_content_generator.py  image_service.py  json_generator.py  json_generator_enhanced.py  pyproject.toml  requirements.txt
src/ai/resource/: sample_document.md
src/examples/: animation_showcase.json  cardx_credit_cards_presentation.json  cardx_speedy_cash_presentation.json  comprehensive_example.json  flexible_animation_demo.json  flowchart_example.json  input.json  insurance_sales_training.json  iphone_16_pro_presentation.json  llm_presentation_minimal.json  motion_animations.json  newton_laws_minimal.json  simple_animation_test.json  simple_test.json  slide-viewer.html  table_demo.json  template_corporate.json  template_creative.json  template_modern.json  test_connector_fix.py  test_flowchart.py  what_is_llm.json
src/output/: cardx_credit_cards_presentation.pptx  cardx_speedy.pptx  demo-flow.pptx  iphone_16_pro_presentation.pptx  llm_minimal_redesigned.pptx  newton_laws_minimaly6.pptx  newton_laws_minimaly8.pptx  template_corporate.pptx  template_creative.pptx  template_modern.pptx  test_generation.pptx  what_is_llm.pptx  what_is_llm_fixed.pptx  ~$what_is_llm_fixed.pptx
src/pypptx_engine/: __init__.py  animations.py  cli.py  debug_test.py  diagnostics.py  engine.py  flowchart.py  formatters.py  shapes.py  slides.py  templates.py  validate.py
src/result/test_enhanced_ai/: content_plan.md  project_summary.md
src/result/test_enhanced_llm/: content_plan.md
